// Protocol definition for compact block data from lightwalletd
// Based on https://github.com/zcash/lightwalletd

syntax = "proto3";
package cash.z.wallet.sdk.rpc;

option go_package = "walletrpc";

// CompactBlock is a compact representation of a Zcash block
message CompactBlock {
    uint32 protoVersion = 1;
    uint64 height = 2;
    bytes hash = 3;
    bytes prevHash = 4;
    uint32 time = 5;
    bytes header = 6;  // First 80 bytes of the block
    repeated CompactTx vtx = 7;  // Compact transactions
    ChainMetadata chainMetadata = 8;
}

// ChainMetadata contains metadata about the chain
message ChainMetadata {
    uint32 saplingCommitmentTreeSize = 1;
    uint32 orchardCommitmentTreeSize = 2;
}

// CompactTx contains compact transaction data
message CompactTx {
    uint64 index = 1;
    bytes hash = 2;
    uint32 fee = 3;
    repeated CompactSaplingSpend spends = 4;
    repeated CompactSaplingOutput outputs = 5;
    repeated CompactOrchardAction actions = 6;
}

// CompactSaplingSpend contains a Sapling spend nullifier
message CompactSaplingSpend {
    bytes nf = 1;  // Nullifier (32 bytes)
}

// CompactSaplingOutput contains Sapling output data
message CompactSaplingOutput {
    bytes cmu = 1;
    bytes ephemeralKey = 2;
    bytes ciphertext = 3;  // First 52 bytes of ciphertext
}

// CompactOrchardAction contains Orchard action data
message CompactOrchardAction {
    bytes nullifier = 1;       // Nullifier (32 bytes)
    bytes cmx = 2;             // Commitment (32 bytes)
    bytes ephemeralKey = 3;    // Ephemeral key (32 bytes)
    bytes ciphertext = 4;      // First 52 bytes of ciphertext
}
